# parametrizacao-de-tubos

./: LICENSE  README.md  main.py  main.spec  pyproject.toml
src/: AppY.py  calculo_notebook.py  parametros_py.py  tests.py  utils.py
src/csv/: materiais.csv
src/originals/: AppY.txt  CALCULONOTEBOOk.txt  PARAMETROSPY.py  PARAMETROSPY.txt
